--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="light dark" name="color-scheme"/>
     <script src="app.js"></script>
-    <link href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>game</title>
 </head>
 <body></body>
